repository make method calcUserReputation, add VmTypes, VmOffers, MinerPayouts, UserReports, BusinessActivity, UserReportsPpsSum, UserReputation, VotingPower, MinerReputation collections
