# api/github.com/P2PCloud/miner-search-api/api.pb.go
@@ -167,7 +167,7 @@ func (x *FindOfferResponse) GetOffers() []*Offer {
 	return nil
 }
 
-type Offer struct {
+type VmType struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
@@ -181,10 +181,101 @@ type Offer struct {
 	NetSpeed  int32  `protobuf:"varint,7,opt,name=netSpeed,proto3" json:"netSpeed,omitempty"`
 }
 
+func (x *VmType) Reset() {
+	*x = VmType{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_api_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *VmType) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*VmType) ProtoMessage() {}
+
+func (x *VmType) ProtoReflect() protoreflect.Message {
+	mi := &file_api_api_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use VmType.ProtoReflect.Descriptor instead.
+func (*VmType) Descriptor() ([]byte, []int) {
+	return file_api_api_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *VmType) GetRegion() string {
+	if x != nil {
+		return x.Region
+	}
+	return ""
+}
+
+func (x *VmType) GetCpuSingle() int32 {
+	if x != nil {
+		return x.CpuSingle
+	}
+	return 0
+}
+
+func (x *VmType) GetCpuMulti() int32 {
+	if x != nil {
+		return x.CpuMulti
+	}
+	return 0
+}
+
+func (x *VmType) GetRam() int32 {
+	if x != nil {
+		return x.Ram
+	}
+	return 0
+}
+
+func (x *VmType) GetDiskSpeed() int32 {
+	if x != nil {
+		return x.DiskSpeed
+	}
+	return 0
+}
+
+func (x *VmType) GetDiskSize() int32 {
+	if x != nil {
+		return x.DiskSize
+	}
+	return 0
+}
+
+func (x *VmType) GetNetSpeed() int32 {
+	if x != nil {
+		return x.NetSpeed
+	}
+	return 0
+}
+
+type Offer struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Pps    int32   `protobuf:"varint,1,opt,name=pps,proto3" json:"pps,omitempty"`
+	Miner  string  `protobuf:"bytes,2,opt,name=miner,proto3" json:"miner,omitempty"`
+	VmType *VmType `protobuf:"bytes,3,opt,name=vmType,proto3" json:"vmType,omitempty"`
+}
+
 func (x *Offer) Reset() {
 	*x = Offer{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_api_api_proto_msgTypes[2]
+		mi := &file_api_api_proto_msgTypes[3]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -197,7 +288,7 @@ func (x *Offer) String() string {
 func (*Offer) ProtoMessage() {}
 
 func (x *Offer) ProtoReflect() protoreflect.Message {
-	mi := &file_api_api_proto_msgTypes[2]
+	mi := &file_api_api_proto_msgTypes[3]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -210,56 +301,28 @@ func (x *Offer) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use Offer.ProtoReflect.Descriptor instead.
 func (*Offer) Descriptor() ([]byte, []int) {
-	return file_api_api_proto_rawDescGZIP(), []int{2}
+	return file_api_api_proto_rawDescGZIP(), []int{3}
 }
 
-func (x *Offer) GetRegion() string {
+func (x *Offer) GetPps() int32 {
 	if x != nil {
-		return x.Region
+		return x.Pps
+	}
+	return 0
+}
+
+func (x *Offer) GetMiner() string {
+	if x != nil {
+		return x.Miner
 	}
 	return ""
 }
 
-func (x *Offer) GetCpuSingle() int32 {
+func (x *Offer) GetVmType() *VmType {
 	if x != nil {
-		return x.CpuSingle
+		return x.VmType
 	}
-	return 0
-}
-
-func (x *Offer) GetCpuMulti() int32 {
-	if x != nil {
-		return x.CpuMulti
-	}
-	return 0
-}
-
-func (x *Offer) GetRam() int32 {
-	if x != nil {
-		return x.Ram
-	}
-	return 0
-}
-
-func (x *Offer) GetDiskSpeed() int32 {
-	if x != nil {
-		return x.DiskSpeed
-	}
-	return 0
-}
-
-func (x *Offer) GetDiskSize() int32 {
-	if x != nil {
-		return x.DiskSize
-	}
-	return 0
-}
-
-func (x *Offer) GetNetSpeed() int32 {
-	if x != nil {
-		return x.NetSpeed
-	}
-	return 0
+	return nil
 }
 
 var File_api_api_proto protoreflect.FileDescriptor
@@ -285,30 +348,36 @@ var file_api_api_proto_rawDesc = []byte{
 	0x4f, 0x66, 0x66, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x29, 0x0a,
 	0x06, 0x6f, 0x66, 0x66, 0x65, 0x72, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x11, 0x2e,
 	0x73, 0x65, 0x61, 0x72, 0x63, 0x68, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x4f, 0x66, 0x66, 0x65, 0x72,
-	0x52, 0x06, 0x6f, 0x66, 0x66, 0x65, 0x72, 0x73, 0x22, 0xc1, 0x01, 0x0a, 0x05, 0x4f, 0x66, 0x66,
-	0x65, 0x72, 0x12, 0x16, 0x0a, 0x06, 0x72, 0x65, 0x67, 0x69, 0x6f, 0x6e, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x06, 0x72, 0x65, 0x67, 0x69, 0x6f, 0x6e, 0x12, 0x1c, 0x0a, 0x09, 0x63, 0x70,
-	0x75, 0x53, 0x69, 0x6e, 0x67, 0x6c, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x09, 0x63,
-	0x70, 0x75, 0x53, 0x69, 0x6e, 0x67, 0x6c, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x63, 0x70, 0x75, 0x4d,
-	0x75, 0x6c, 0x74, 0x69, 0x18, 0x03, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x63, 0x70, 0x75, 0x4d,
-	0x75, 0x6c, 0x74, 0x69, 0x12, 0x10, 0x0a, 0x03, 0x72, 0x61, 0x6d, 0x18, 0x04, 0x20, 0x01, 0x28,
-	0x05, 0x52, 0x03, 0x72, 0x61, 0x6d, 0x12, 0x1c, 0x0a, 0x09, 0x64, 0x69, 0x73, 0x6b, 0x53, 0x70,
-	0x65, 0x65, 0x64, 0x18, 0x05, 0x20, 0x01, 0x28, 0x05, 0x52, 0x09, 0x64, 0x69, 0x73, 0x6b, 0x53,
-	0x70, 0x65, 0x65, 0x64, 0x12, 0x1a, 0x0a, 0x08, 0x64, 0x69, 0x73, 0x6b, 0x53, 0x69, 0x7a, 0x65,
-	0x18, 0x06, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x64, 0x69, 0x73, 0x6b, 0x53, 0x69, 0x7a, 0x65,
-	0x12, 0x1a, 0x0a, 0x08, 0x6e, 0x65, 0x74, 0x53, 0x70, 0x65, 0x65, 0x64, 0x18, 0x07, 0x20, 0x01,
-	0x28, 0x05, 0x52, 0x08, 0x6e, 0x65, 0x74, 0x53, 0x70, 0x65, 0x65, 0x64, 0x32, 0x78, 0x0a, 0x0d,
-	0x53, 0x65, 0x61, 0x72, 0x63, 0x68, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x67, 0x0a,
-	0x09, 0x46, 0x69, 0x6e, 0x64, 0x4f, 0x66, 0x66, 0x65, 0x72, 0x12, 0x1c, 0x2e, 0x73, 0x65, 0x61,
-	0x72, 0x63, 0x68, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x46, 0x69, 0x6e, 0x64, 0x4f, 0x66, 0x66, 0x65,
-	0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1d, 0x2e, 0x73, 0x65, 0x61, 0x72, 0x63,
+	0x52, 0x06, 0x6f, 0x66, 0x66, 0x65, 0x72, 0x73, 0x22, 0xc2, 0x01, 0x0a, 0x06, 0x56, 0x6d, 0x54,
+	0x79, 0x70, 0x65, 0x12, 0x16, 0x0a, 0x06, 0x72, 0x65, 0x67, 0x69, 0x6f, 0x6e, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x06, 0x72, 0x65, 0x67, 0x69, 0x6f, 0x6e, 0x12, 0x1c, 0x0a, 0x09, 0x63,
+	0x70, 0x75, 0x53, 0x69, 0x6e, 0x67, 0x6c, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x09,
+	0x63, 0x70, 0x75, 0x53, 0x69, 0x6e, 0x67, 0x6c, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x63, 0x70, 0x75,
+	0x4d, 0x75, 0x6c, 0x74, 0x69, 0x18, 0x03, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x63, 0x70, 0x75,
+	0x4d, 0x75, 0x6c, 0x74, 0x69, 0x12, 0x10, 0x0a, 0x03, 0x72, 0x61, 0x6d, 0x18, 0x04, 0x20, 0x01,
+	0x28, 0x05, 0x52, 0x03, 0x72, 0x61, 0x6d, 0x12, 0x1c, 0x0a, 0x09, 0x64, 0x69, 0x73, 0x6b, 0x53,
+	0x70, 0x65, 0x65, 0x64, 0x18, 0x05, 0x20, 0x01, 0x28, 0x05, 0x52, 0x09, 0x64, 0x69, 0x73, 0x6b,
+	0x53, 0x70, 0x65, 0x65, 0x64, 0x12, 0x1a, 0x0a, 0x08, 0x64, 0x69, 0x73, 0x6b, 0x53, 0x69, 0x7a,
+	0x65, 0x18, 0x06, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x64, 0x69, 0x73, 0x6b, 0x53, 0x69, 0x7a,
+	0x65, 0x12, 0x1a, 0x0a, 0x08, 0x6e, 0x65, 0x74, 0x53, 0x70, 0x65, 0x65, 0x64, 0x18, 0x07, 0x20,
+	0x01, 0x28, 0x05, 0x52, 0x08, 0x6e, 0x65, 0x74, 0x53, 0x70, 0x65, 0x65, 0x64, 0x22, 0x5b, 0x0a,
+	0x05, 0x4f, 0x66, 0x66, 0x65, 0x72, 0x12, 0x10, 0x0a, 0x03, 0x70, 0x70, 0x73, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x05, 0x52, 0x03, 0x70, 0x70, 0x73, 0x12, 0x14, 0x0a, 0x05, 0x6d, 0x69, 0x6e, 0x65,
+	0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x6d, 0x69, 0x6e, 0x65, 0x72, 0x12, 0x2a,
+	0x0a, 0x06, 0x76, 0x6d, 0x54, 0x79, 0x70, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x12,
+	0x2e, 0x73, 0x65, 0x61, 0x72, 0x63, 0x68, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x56, 0x6d, 0x54, 0x79,
+	0x70, 0x65, 0x52, 0x06, 0x76, 0x6d, 0x54, 0x79, 0x70, 0x65, 0x32, 0x78, 0x0a, 0x0d, 0x53, 0x65,
+	0x61, 0x72, 0x63, 0x68, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x67, 0x0a, 0x09, 0x46,
+	0x69, 0x6e, 0x64, 0x4f, 0x66, 0x66, 0x65, 0x72, 0x12, 0x1c, 0x2e, 0x73, 0x65, 0x61, 0x72, 0x63,
 	0x68, 0x5f, 0x61, 0x70, 0x69, 0x2e, 0x46, 0x69, 0x6e, 0x64, 0x4f, 0x66, 0x66, 0x65, 0x72, 0x52,
-	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12,
-	0x15, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x73, 0x65, 0x61, 0x72, 0x63, 0x68, 0x2f, 0x66, 0x69, 0x6e,
-	0x64, 0x4f, 0x66, 0x66, 0x65, 0x72, 0x42, 0x26, 0x5a, 0x24, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
-	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x50, 0x32, 0x50, 0x43, 0x6c, 0x6f, 0x75, 0x64, 0x2f, 0x6d, 0x69,
-	0x6e, 0x65, 0x72, 0x2d, 0x73, 0x65, 0x61, 0x72, 0x63, 0x68, 0x2d, 0x61, 0x70, 0x69, 0x62, 0x06,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1d, 0x2e, 0x73, 0x65, 0x61, 0x72, 0x63, 0x68, 0x5f,
+	0x61, 0x70, 0x69, 0x2e, 0x46, 0x69, 0x6e, 0x64, 0x4f, 0x66, 0x66, 0x65, 0x72, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12, 0x15, 0x2f,
+	0x61, 0x70, 0x69, 0x2f, 0x73, 0x65, 0x61, 0x72, 0x63, 0x68, 0x2f, 0x66, 0x69, 0x6e, 0x64, 0x4f,
+	0x66, 0x66, 0x65, 0x72, 0x42, 0x26, 0x5a, 0x24, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63,
+	0x6f, 0x6d, 0x2f, 0x50, 0x32, 0x50, 0x43, 0x6c, 0x6f, 0x75, 0x64, 0x2f, 0x6d, 0x69, 0x6e, 0x65,
+	0x72, 0x2d, 0x73, 0x65, 0x61, 0x72, 0x63, 0x68, 0x2d, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -323,21 +392,23 @@ func file_api_api_proto_rawDescGZIP() []byte {
 	return file_api_api_proto_rawDescData
 }
 
-var file_api_api_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_api_api_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_api_api_proto_goTypes = []interface{}{
 	(*FindOfferRequest)(nil),  // 0: search_api.FindOfferRequest
 	(*FindOfferResponse)(nil), // 1: search_api.FindOfferResponse
-	(*Offer)(nil),             // 2: search_api.Offer
+	(*VmType)(nil),            // 2: search_api.VmType
+	(*Offer)(nil),             // 3: search_api.Offer
 }
 var file_api_api_proto_depIdxs = []int32{
-	2, // 0: search_api.FindOfferResponse.offers:type_name -> search_api.Offer
-	0, // 1: search_api.SearchService.FindOffer:input_type -> search_api.FindOfferRequest
-	1, // 2: search_api.SearchService.FindOffer:output_type -> search_api.FindOfferResponse
-	2, // [2:3] is the sub-list for method output_type
-	1, // [1:2] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	3, // 0: search_api.FindOfferResponse.offers:type_name -> search_api.Offer
+	2, // 1: search_api.Offer.vmType:type_name -> search_api.VmType
+	0, // 2: search_api.SearchService.FindOffer:input_type -> search_api.FindOfferRequest
+	1, // 3: search_api.SearchService.FindOffer:output_type -> search_api.FindOfferResponse
+	3, // [3:4] is the sub-list for method output_type
+	2, // [2:3] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
 }
 
 func init() { file_api_api_proto_init() }
@@ -371,6 +442,18 @@ func file_api_api_proto_init() {
 			}
 		}
 		file_api_api_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*VmType); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_api_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*Offer); i {
 			case 0:
 				return &v.state
@@ -389,7 +472,7 @@ func file_api_api_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_api_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   3,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
